# gadgets

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE.md  README.md
.github/workflows/: ContinuousIntegration.yml
badges/master/: line_coverage.json
docs/: BUILDING.md
lib/: .clang-format  CMakeLists.txt
src/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/Core/Mocks/: CMakeLists.txt
src/Core/Tests/: CMakeLists.txt
src/Core/Tests/src/: LoggerSingletonTests.cpp  SemaphoreTests.cpp
src/Core/include/Gadgets/Core/: AssertionMacros.hpp  CommonMacros.hpp  ExceptionMacros.hpp  ILogger.hpp  IObject.hpp  ITaskQueue.hpp  IThread.hpp  LoggerMacros.hpp  LoggerSingleton.hpp  Semaphore.hpp  Singleton.hpp  TaskQueue.hpp  Thread.hpp
src/Core/src/: LoggerSingleton.cpp  Semaphore.cpp  TaskQueue.cpp  Thread.cpp
src/Devices/: CMakeLists.txt
src/Devices/Common/: CMakeLists.txt
src/Devices/Common/include/Gadgets/Devices/: BaseDevice.hpp  DeviceException.hpp  DeviceResponse.hpp  DriverResponse.hpp  IDevice.hpp  IDeviceDriver.hpp
src/Devices/Common/src/: BaseDevice.cpp
src/Devices/DigitalOutput/: CMakeLists.txt
src/Devices/DigitalOutput/include/Gadgets/Devices/: DigitalOutputDevice.hpp  IDigitalOutputDevice.hpp  IDigitalOutputDriver.hpp
src/Devices/DigitalOutput/src/: DigitalOutputDevice.cpp
src/Drivers/: CMakeLists.txt
src/Drivers/Common/: CMakeLists.txt
src/Drivers/Common/include/Gadgets/Drivers/: BaseDeviceDriver.hpp
src/Drivers/Common/src/: BaseDeviceDriver.cpp
src/Drivers/EmulatedDigitalOutput/: CMakeLists.txt
src/Drivers/EmulatedDigitalOutput/include/Gadgets/Drivers/: EmulatedDigitalOutputDriver.hpp
src/Drivers/EmulatedDigitalOutput/src/: EmulatedDigitalOutputDriver.cpp
src/Example/: CMakeLists.txt
src/Example/src/: main.cpp
src/TestRunner/: CMakeLists.txt
src/TestRunner/src/: SemaphoreTests.cpp  main.cpp
src/Tests/: CMakeLists.txt
src/Tests/include/Gadgets/Core/: MockLogger.hpp  MockTaskQueue.hpp
src/Tests/include/Gadgets/Devices/: MockDeviceDriver.hpp  MockDigitalOutputDriver.hpp
src/Tests/src/: main.cpp
src/Tests/src/Gadgets/Core/: LoggerSingletonTests.cpp  SemaphoreTests.cpp  TaskQueueTests.cpp
src/Tests/src/Gadgets/Devices/: BaseDeviceTests.cpp  DigitalOutputDeviceTests.cpp
src/Tests/src/Gadgets/Drivers/: EmulatedDigitalOutputDriverTests.cpp
tools/: README.md  build.ps1  build.sh  configure.ps1  configure.sh  coverage.sh  gadgets.cmake  reformat.sh  renormalize.sh
